# envelope-stock-fastapi

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20251229_golden_cross_tables.py  784e41ff1288_initial_migration_create_tables.py
docs/: strategy_guide.md
docs/backtesting/: DATA_VALIDATION.md  PERFORMANCE_METRICS.md  PERFORMANCE_TEST_RESULTS.md  README.md  WORK_PLAN.md  실행_결과_및_제한사항.md
docs/base/: ARCHITECTURE.md  CLAUDE.md  SERVICE.md
examples/: strategy_bollinger_envelope.py
examples/backtest/: README.md  analyze_strategy.py  compare_strategies.py  multi_symbol_backtest.py  optimize_strategy.py  optimized_backtest.py  simple_backtest.py
scripts/: evaluate_strategy_offline.py  init_db_tables.py  optimize_with_stock_selection.py  simulate_golden_cross_strategy.py
src/: CLAUDE.md  __init__.py  main.py
src/adapters/: CLAUDE.md  __init__.py
src/adapters/cache/: __init__.py  redis_client.py
src/adapters/database/: __init__.py  connection.py
src/adapters/database/models/: __init__.py  account.py  base.py  ohlcv.py  order.py  position.py  stock_universe.py  strategy.py  strategy_signal.py  strategy_symbol_state.py
src/adapters/database/repositories/: __init__.py  base_repository.py  ohlcv_repository.py  order_repository.py  stock_universe_repository.py  strategy_repository.py  strategy_signal_repository.py  strategy_symbol_state_repository.py
src/application/: CLAUDE.md  __init__.py
src/application/common/: CLAUDE.md  __init__.py  background_tasks.py  decorators.py  dependencies.py  dto.py  exceptions.py  formatters.py  indicators.py  performance_metrics.py  validators.py
src/application/domain/: CLAUDE.md  __init__.py
src/application/domain/account/: __init__.py  dto.py  service.py
src/application/domain/auth/: __init__.py  dto.py  service.py
src/application/domain/backtest/: __init__.py  data_loader.py  dto.py  engine.py  order_manager.py  position_manager.py  service.py
src/application/domain/market_data/: __init__.py  dto.py  service.py
src/application/domain/news_trading/: CLAUDE.md  __init__.py  backtest_engine.py  dto.py  exit_manager.py  momentum_detector.py  news_analyzer.py  safety_guard.py  stock_selector.py  strategy_engine.py
src/application/domain/order/: __init__.py  dto.py  service.py
src/application/domain/strategy/: __init__.py  dto.py  engine.py  golden_cross_engine.py  scheduler.py  service.py  state_machine.py  stock_screener.py
src/application/domain/websocket_domain/: __init__.py
src/application/interface/: CLAUDE.md  __init__.py  account_router.py  auth_router.py  backtest_router.py  market_data_router.py  websocket_router.py
src/application/interface/api/: order_router.py  strategy_router.py
src/application/interface/page/: __init__.py  admin_page.py
src/settings/: CLAUDE.md  __init__.py  config.py
templates/: admin_dashboard.html
tests/: test_backtest_data_loader.py  test_backtest_engine.py  test_backtest_order_manager.py  test_backtest_performance.py  test_backtest_position_manager.py  test_indicators.py
tests/adapters/: test_kis_client_metrics.py
tests/domain/: test_order_service_ops.py
tests/domain/news_trading/: __init__.py  test_exit_manager.py  test_momentum_detector.py  test_news_analyzer.py  test_safety_guard.py  test_stock_selector.py
