[project]
name = "kis-trading-api"
version = "0.1.0"
description = "한국투자증권 Open API 기반 증권 자동매매 API 서버"
requires-python = ">=3.9"
authors = [
    { name = "hantwo", email = "hantwo@example.com" }
]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # FastAPI 및 서버
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # 비동기 SQLAlchemy + PostgreSQL
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # Redis 캐싱
    "redis[hiredis]>=5.1.0",

    # HTTP 클라이언트
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "tenacity>=9.0.0",

    # WebSocket
    "websockets>=13.0",

    # 데이터 처리
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # 보안 및 인증
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pycryptodome>=3.20.0",

    # 환경 설정
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # 템플릿 엔진 (대시보드)
    "jinja2>=3.1.0",

    # 유틸리티
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    # 테스트
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # TestClient 사용

    # 코드 품질
    "mypy>=1.11.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "pylint>=3.2.0",

    # 타입 스텁
    "types-redis>=4.6.0",
    "types-requests>=2.32.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
